# solana-zk-proof-example

./: .gitignore  README.md
on-chain-program-example/: Cargo.toml
on-chain-program-example/src/: account_state.rs  account_state_circuit.rs  byte_utils.rs  circuit.rs  errors.rs  example.rs  example2.rs  lib.rs  main.rs  prove.rs  verify.rs  verify_lite.rs
proof-verify/: Cargo.toml  README.md
proof-verify/src/: lib.rs
